Refactored animation system